chore(besu/prod): update helm values

--- a/helm/values/prod/archive-1.yml
+++ b/helm/values/prod/archive-1.yml
@@ -15,11 +15,12 @@ cluster:
 
 node:
   besu:
+    envBesuOpts: "-XX:MaxRAMPercentage=60.0 -XX:MinRAMPercentage=60.0 -XX:InitialRAMPercentage=60.0"
     resources:
       cpuLimit: "1500m"
       cpuRequest: "100m"
-      memLimit: "2G"
-      memRequest: "500Mi"
+      memLimit: "4G"
+      memRequest: "4G"
     customLabels:
       nodeType: archive
     metrics:
