--- a/helm/values/prod/rpc-1.yml
+++ b/helm/values/prod/rpc-1.yml
@@ -19,8 +19,8 @@ node:
     resources:
       cpuLimit: "1001m"
       cpuRequest: "100m"
-      memLimit: "2G"
-      memRequest: "500Mi"
+      memLimit: "4G"
+      memRequest: "4G"
     metrics:
       serviceMonitorEnabled: false
     customLabels:
