--- a/helm/values/prod/archive-2.yml
+++ b/helm/values/prod/archive-2.yml
@@ -15,12 +15,12 @@ cluster:
 
 node:
   besu:
-    envBesuOpts: "-XX:MaxRAMPercentage=60.0 -XX:MinRAMPercentage=60.0 -XX:InitialRAMPercentage=60.0"
+    envBesuOpts: "-XX:MaxRAMPercentage=60.0 -XX:MinRAMPercentage=60.0 -XX:InitialRAMPercentage=60.0 -XX:InitialHeapSize=256M -XX:InitiatingHeapOccupancyPercent=30 -XX:G1HeapRegionSize=16M -XX:NewSize=256M"
     resources:
-      cpuLimit: "1500m"
-      cpuRequest: "100m"
-      memLimit: "4G"
-      memRequest: "4G"
+      cpuLimit: "3500m"
+      cpuRequest: "3001m"
+      memLimit: "8G"
+      memRequest: "8G"
     customLabels:
       nodeType: archive
     metrics:
