--- a/helm/values/nonprod/bootnode-1.yml
+++ b/helm/values/nonprod/bootnode-1.yml
@@ -1,3 +1,7 @@
+image:
+  besu:
+    tag: 24.6.0
+
 quorumFlags:
   privacy: false
   removeKeysOnDelete: false
@@ -14,8 +18,6 @@ node:
     envBesuOpts: ""
     metrics:
       serviceMonitorEnabled: false
-    account:
-      password: 'password'
     customLabels:
       nodeType: bootnode
 
@@ -24,4 +26,4 @@ storage:
 
 affinity:
   zone:
-  - ap-southeast-2c
+  - ap-southeast-2a
