--- a/helm/values/nonprod/validator-1.yml
+++ b/helm/values/nonprod/validator-1.yml
@@ -1,3 +1,7 @@
+image:
+  besu:
+    tag: 24.6.0
+
 quorumFlags:
   privacy: false
   removeKeysOnDelete: false
@@ -22,4 +26,4 @@ storage:
 
 affinity:
   zone:
-  - ap-southeast-2c
+  - ap-southeast-2a
