chore(helm): update disk type, add rpc3 instance and ingress

--- a/helm/charts/besu-node/templates/node-ingress.yaml
+++ b/helm/charts/besu-node/templates/node-ingress.yaml
@@ -1,4 +1,4 @@
-{{- if (and (eq .Values.node.besu.customLabels.nodeType "rpc") (ne .Release.Name "rpc-2") (.Values.ingress.enabled)) }}
+{{- if (and (eq .Values.node.besu.customLabels.nodeType "rpc") (eq .Release.Name "rpc-1") (.Values.ingress.enabled)) }}
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
