--- a/helm/values/prod/validator-4.yml
+++ b/helm/values/prod/validator-4.yml
@@ -31,8 +31,9 @@ node:
       api: '["ETH", "ADMIN", "NET", "QBFT"]'
 
 storage:
+  storageType: "SSD"
   pvcSizeLimit: 1Gi
 
 affinity:
   zone:
-  - ap-southeast-2a
+  - ap-southeast-2b
